Finish static pages

--- a/app/views/static_pages/books.html.erb
+++ b/app/views/static_pages/books.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#books</h1>
-<p>Find me in app/views/static_pages/books.html.erb</p>
+<% provide(:title, 'Books') %>
+<!DOCTYPE html>
+<html>
+  <head>
+
+  </head>
+  <body>
+
+  </body>
+</html>
