--- a/app/views/static_pages/essays.html.erb
+++ b/app/views/static_pages/essays.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#essays</h1>
-<p>Find me in app/views/static_pages/essays.html.erb</p>
+<% provide(:title, 'Essays') %>
+<!DOCTYPE html>
+<html>
+  <head>
+
+  </head>
+  <body>
+
+  </body>
+</html>
